--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ dependencies = [
     "python-ulid>=3.0.0",
     "pyyaml>=6.0.2",
     "requests>=2.32.4",
+    "openai>=1.0.0",
+    "pydantic>=2.0", 
 ]
 requires-python = ">=3.11"
 authors = [
